--- a/src/partials/login.html
+++ b/src/partials/login.html
@@ -5,10 +5,14 @@
 </div>
 <div class="row">
 	<div class="col-md-4 col-md-offset-4">
+		<div class="alert alert-danger panel-heading" ng-cloak ng-show="errorMessage != ''">
+			<h4>{{errorMessage}}</h4>
+		</div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-4 col-md-offset-4">
 		<div class="panel panel-default">
-			<div class="alert alert-danger panel-heading" ng-cloak ng-show="errorMessage != ''">
-					{{errorMessage}}
-				</div>
 			<div class="panel-heading">
 				<h3 class="panel-title">Please sign in</h3>
 			</div>
