--- a/src/partials/rooms.html
+++ b/src/partials/rooms.html
@@ -1,6 +1,5 @@
 <h1>Hi {{currentUser}}!</h1>
 <h2>These are the active chat rooms!</h2>
-
 <table class="table table-striped table-hover table-bordered ">
   <thead>
     <tr>
@@ -10,8 +9,30 @@
   </thead>
   <tbody>
     <tr ng-repeat="room in rooms">
-    	<td><h4>{{room}}</h4></td>
-    	<td><a href="#/room/{{currentUser}}/{{room}}" class="btn btn-success">Join</a></td>
+      <td><h4>{{room}}</h4></td>
+      <td><a href="#/room/{{currentUser}}/{{room}}" class="btn btn-success">Join</a></td>
     </tr>
   </tbody>
-</table> 
+</table>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h4>You can also create your own room!</h4>
+  </div>
+  <div class="panel-body">
+    <form class="form-inline">
+      <div class="form-group">
+        <label for="roomName"></label>
+        <input type="text" class="form-control" id="roomName" placeholder="What's the name of your room?" ng-model="roomName">
+      </div>
+      <div class="form-group">
+        <label for="roomPass"></label>
+        <input type="password" class="form-control" id="roomPass" placeholder="Set a password (optional)" ng-model="roomPass">
+      </div>
+      <button type="submit" class="btn btn-primary" ng-click="createRoom()">Create</button>
+    </form>
+  </div>
+</div>
+
+<ul ng-repeat"user in users">
+  <li>{{user}}</li>
+</ul>
