fixed login screen css error

--- a/src/partials/room.html
+++ b/src/partials/room.html
@@ -6,7 +6,7 @@
 <div id="chatWindow">
 	<ul id="messages"></ul>
 </div>
-<form action="" class="form-inline">
+<form action="" class="form-inline" id="chatForm">
       <input id="m" autocomplete="off" />
       	<button class="btn btn-primary">Send</button>
 </form>
