--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,12 +14,12 @@ body {
 #messages { list-style-type: none; margin: 0; padding: 0; }
 #messages li { padding: 5px 10px; }
 #messages li:nth-child(odd) { background: #eee; }
-form {
+#chatForm {
 	width: 500px;
 	margin: auto;
 	margin-top: 10px;
 }
-form input {
+#chatForm input {
 	border: 0;
 	padding: 9px;
 	vertical-align: middle;
