Tiny Css changes, made chatwindow bigger.

--- a/src/partials/room.html
+++ b/src/partials/room.html
@@ -13,7 +13,7 @@
 	</ul>
 </div>
 
-<form accept-charset="UTF-8" role="form" class="form-inline" id="chatForm">
+<form accept-charset="UTF-8" role="form" class="form-inline" id="chatForm" name="myForm">
 	<fieldset>
 		<div class="form-group" id="chatInputDiv">
 			<input type="text" id="chatInput" autocomplete="off" ng-model="message">
