--- a/src/partials/rooms.html
+++ b/src/partials/rooms.html
@@ -1,5 +1,6 @@
 <h1>Hi {{currentUser}}!</h1>
 <h2>These are the active chat rooms!</h2>
+
 <table class="table table-striped table-hover table-bordered ">
   <thead>
     <tr>
@@ -10,27 +11,29 @@
   <tbody>
     <tr ng-repeat="room in rooms">
       <td><h4>{{room}}</h4></td>
-      <td><a href="#/room/{{currentUser}}/{{room}}" class="btn btn-success" ng-click="joinRoom()">Join</a></td>
+      <td><a href="#/room/{{currentUser}}/{{room}}/" class="btn btn-success">Join</a></td>
     </tr>
   </tbody>
 </table>
+
 <div class="panel panel-default">
+
   <div class="panel-heading">
     <h4>You can also create your own room!</h4>
   </div>
+
   <div class="panel-body">
-    <form class="form-inline">
+
+    <form class="form-inline" name="createRoomForm" ng-submit="createRoom()">
       <div class="form-group">
         <label for="roomName"></label>
-        <input type="text" class="form-control" id="roomName" placeholder="What's the name of your room?" ng-model="roomName">
+        <input type="text" name="nameOfRoom" required class="form-control" id="roomName" placeholder="What's the name of your room?" ng-model="roomName">
       </div>
-      <div class="form-group">
-        <label for="roomPass"></label>
-        <input type="password" class="form-control" id="roomPass" placeholder="Set a password (optional)" ng-model="roomPass">
-      </div>
-      <button type="submit" class="btn btn-primary" ng-click="createRoom()">Create</button>
+      <button type="submit" class="btn btn-primary">Create</button>
     </form>
+
   </div>
+
 </div>
 
 <div class="panel panel-default">
