Made list of all users show in each room

--- a/src/partials/room.html
+++ b/src/partials/room.html
@@ -11,7 +11,7 @@
 <div class="row chatRow">
 	<div class="col-md-1">
 		<h4>Users:</h4>
-		<ul class="list-group" ng-repeat="user in roomUsers">
+		<ul class="list-group" ng-repeat="user in allRoomUsers">
 			<li class="list-group-item">{{user}}</li>
 		</ul>
 	</div>
