Minor style changes and userlist fixed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,6 +4,10 @@ body {
 .roomUserList {
 	float: right;
 	overflow: auto;
+	height: 500px;
+}
+.glyphicon-user {
+	float: left;
 }
 .chatRow {
 	margin-top: 2%;
