--- a/src/css/style.css
+++ b/src/css/style.css
@@ -55,8 +55,8 @@ body {
 	float:right;
 }
 
-.btnRemove {
-	position: absolute;
-	left: 0%;
-	padding: 0px 0px;
+.userItem {
+	border: 2px solid #2b3e50;
+	margin-left: 0;
+	margin-right: 0;
 }
