--- a/src/partials/room.html
+++ b/src/partials/room.html
@@ -32,13 +32,18 @@
 			<i class="glyphicon glyphicon-user form-control-feedback"></i>
 		</div>
 
-		<ul class="list-group">
-			<li class ="list-group-item btn btn-primary" ng-repeat="user in currentUsers | filter:searchUser">
-				<span class="glyphicon glyphicon-user"></span>
-				{{user}} <span ng-if="isOp(user)">(OP)</span>
-				<span ng-if="isOp(currentUser) && !isOp(user)" class="btnRemove btn glyphicon glyphicon-remove" ng-click=""></span>
-			</li>
-		</ul>
+		<div class="list-group">
+			<div class ="row list-group-item userItem" ng-repeat="user in currentUsers | filter:searchUser">
+				<div class="col-md-12 btn">
+					<span class="glyphicon glyphicon-user"></span>
+					{{user}} <span ng-if="isOp(user)">(OP)</span>
+				</div>
+				<div>
+					<div ng-if="isOp(currentUser) && !isOp(user)" class="col-md-6 btn" ng-click="">Kick</div>
+					<div ng-if="isOp(currentUser) && !isOp(user)" class="col-md-6 btn" ng-click="">Ban</div>
+				</div>
+			</div>
+		</div>
 
 	</div>
 </div>
