--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,13 @@ body {
 	overflow: auto;
 	height: 500px;
 }
+.nav-tabs.nav-justified{
+	width: 83.5%;
+}
+#roomList {
+	height: 545px;
+	overflow: auto;
+}
 .glyphicon-user {
 	float: left;
 }
