--- a/src/css/style.css
+++ b/src/css/style.css
@@ -60,3 +60,10 @@ body {
 	margin-left: 0;
 	margin-right: 0;
 }
+
+.bannedUserItem {
+	background-color: rgb(77,0,0);
+	border: 2px solid #2b3e50;
+	margin-left: 0;
+	margin-right: 0;
+}
