--- a/src/partials/rooms.html
+++ b/src/partials/rooms.html
@@ -5,7 +5,7 @@
   <div class="col-md-2" id="roomList">
     <h4>Avilable rooms:</h4>
     <ul class="list-group">
-        <li class="list-group-item" ng-repeat="room in rooms" style="border:1px solid black">
+        <li class="list-group-item roomItem" ng-repeat="room in rooms">
           <a ng-click="createRoom(room)" class="btn btn-success">{{room}}</a>
         </li>
     </ul>
