--- a/src/partials/rooms.html
+++ b/src/partials/rooms.html
@@ -6,7 +6,7 @@
     <h4>Avilable rooms:</h4>
     <div class="list-group">
         <div class="row list-group-item roomItem btn" ng-repeat="room in rooms" ng-click="createRoom(room)">
-          <span>{{room}}</span>
+          <span>{{room | capitalize}}</span>
         </div>
     </div>
   </div>
@@ -16,7 +16,7 @@
     <tabset justified="true">
       <tab ng-repeat="channel in curUserChannels">
         <tab-heading>
-          {{channel.name}}
+          {{channel.name | capitalize}}
           <a ng-click="leaveRoom(channel.name)"href=''><i class="glyphicon glyphicon-remove" style="float:right;"></i></a>
         </tab-heading>
         <div id="chatWindow" class="col-md-10" scroll-glue>
@@ -34,7 +34,7 @@
         <div class="roomUserList col-md-2">
 
           <div class="form-group has-feedback has-feedback-left">
-            <input type="text" class="form-control" placeholder="Search user" ng-model="searchUser" />
+            <input type="text" class="form-control" placeholder="Search user" ng-model="searchUser"/>
             <i class="glyphicon glyphicon-user form-control-feedback"></i>
           </div>
 
